add ru_pluralize.py, refactor views to CBV, del company_id from models and DB, add custom handler, add clean to models.Vacancy

--- a/templates/vacancy/base.html
+++ b/templates/vacancy/base.html
@@ -18,7 +18,7 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <ul class="navbar-nav col-10">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'vacancy_view' %}">Вакансии</a>
+            <a class="nav-link" href="{% url 'vacancies_view' %}">Вакансии</a>
           </li>
 
         </ul>
