--- a/templates/vacancy/company.html
+++ b/templates/vacancy/company.html
@@ -1,5 +1,5 @@
 {% extends 'vacancy/base.html' %}
-
+{% load ru_pluralize %}
 {% block container %}
 
   <main class="container mt-3">
@@ -11,10 +11,10 @@
         <img src="{{ company.logo }}" width="100" height="60" alt="">
       </div>
       <h1 class="h1 text-center mx-auto mt-0 pt-1" style="font-size: 70px;"><strong>{{ company.name }}</strong></h1>
-      <p class="text-center pt-1">Компания, {{ company.location }}, {{ vacancies_by_company|length }} вакансий</p>
+      <p class="text-center pt-1">Компания, {{ company.location }}, {{ vacancies|length|ru_pluralize:'вакансия, вакансии, вакансий' }}</p>
       <div class="row mt-5">
         <div class="col-12 col-lg-8 offset-lg-2 m-auto">
-          {% for vacancy in vacancies_by_company %}
+          {% for vacancy in vacancies %}
           <div class="card mb-4">
             <div class="card-body px-4">
               <div class="row">
