--- a/templates/vacancy/index.html
+++ b/templates/vacancy/index.html
@@ -1,5 +1,5 @@
 {% extends 'vacancy/base.html' %}
-
+{% load ru_pluralize %}
 {% block container %}
   <main class="container mt-3">
     <section>
@@ -36,7 +36,7 @@
             <img class="mx-auto d-block" src="{{ specialty.picture }}" alt="">
             <div class="card-body">
               <p class="card-text mb-2">{{ specialty.title }}</p>
-              <p class="card-text"><a href="{% url 'cat_view' specialty.code %}">{{ count_vacancies|get_item:specialty.code }} вакансий</a></p>
+              <p class="card-text"><a href="{% url 'cat_view' specialty.code %}">{{ specialty.vacancies_count|ru_pluralize:'вакансия, вакансии, вакансий' }}</a></p>
             </div>
           </div>
         </div>
@@ -56,7 +56,7 @@
             </a>
             <div class="card-body">
               <p class="card-text mb-2">{{ company.name }}</p>
-              <p class="card-text"><a href="{% url 'companies_view' company.company_id %}">{{ count_companies|get_item:company.company_id }} вакансий</a></p>
+              <p class="card-text"><a href="{% url 'companies_view' company.id %}">{{ company.companies_count|ru_pluralize:'вакансия, вакансии, вакансий' }}</a></p>
             </div>
           </div>
         </div>
