--- a/templates/vacancy/vacancies.html
+++ b/templates/vacancy/vacancies.html
@@ -1,13 +1,13 @@
 {% extends 'vacancy/base.html' %}
-
+{% load ru_pluralize %}
 {% block container %}
 
   <main class="container mt-3">
     <section>
-      {% if vacancy_cat %}
-      <h1 class="h1 text-center mx-auto mt-4 pt-5" style="font-size: 70px;"><strong>{{ vacancy_cat }}</strong></h1>
+      {% if vacancy_title %}
+      <h1 class="h1 text-center mx-auto mt-4 pt-5" style="font-size: 70px;"><strong>{{ vacancy_title.title }}</strong></h1>
       {% endif %}
-      <p class="text-center pt-1">{{ vacancies|length }} вакансий</p>
+      <p class="text-center pt-1">{{ vacancies|length|ru_pluralize:'вакансия, вакансии, вакансий' }}</p>
       <div class="row mt-5">
         <div class="col-12 col-lg-8 offset-lg-2 m-auto">
           {% for vacancy in vacancies %}
